# borrowbee

./: .gitignore  conftest.py  manage.py  pylintrc  pyproject.toml  pytest.ini  setup.cfg
books/: api.py  forms.py  models.py  tasks.py  urls.py  views.py
books/migrations/: 0001_initial.py
borrowbee/: asgi.py  settings.py  urls.py  wsgi.py
client/: package-lock.json  package.json
client/components/: BarcodeScanner.ts  BarcodeScanner.vue
client/entry-points/: my-books.ts
client/entry-points/js/: my-books.ts
pages/: urls.py  views.py
shelves/: authorization.py  forms.py  models.py  tests.py  urls.py  views.py
shelves/migrations/: 0001_initial.py
templates/: _base.html
templates/books/: bookcopy_detail.html  bookcopy_index.html
templates/pages/: home.html
templates/shelves/: shelf_detail.html  shelf_index.html
users/: admin.py  models.py
users/migrations/: 0001_initial.py
